@@ -1,3 +1,7 @@
+2010-01-17  Hiroyuki Ito  <ZXB01226@nifty.com>
+
+	* src/rbpangogravity.c: fix indentation.
+
 2010-01-17  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbpangoscript.c: Pango::Script#get_gravity doesn't accept
